# checkov-severity-mapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: extract-checkov-mappings.yml
src/checkov_severity_extractor/: __init__.py  __main__.py
src/checkov_severity_extractor/core/: __init__.py  extractor.py  patterns.py  processor.py  validator.py
src/checkov_severity_extractor/io/: __init__.py  content_reader.py  file_scanner.py  json_writer.py
src/checkov_severity_extractor/models/: __init__.py  checkov.py  config.py  database.py  severity.py
src/checkov_severity_extractor/utils/: __init__.py  exceptions.py  logging.py  statistics.py
